--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -29,7 +29,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-10-25 19:18:48
+// updated on 2017-11-01 16:51:50
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -3690,7 +3690,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-10-25 19:18:57
+// updated on 2017-11-01 16:51:56
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -4351,6 +4351,7 @@ DOMAIN-SUFFIX,100dyrc.com,ChinaProxy
 DOMAIN-SUFFIX,100e.com,ChinaProxy
 DOMAIN-SUFFIX,100eshu.com,ChinaProxy
 DOMAIN-SUFFIX,100exam.com,ChinaProxy
+DOMAIN-SUFFIX,100free.net,ChinaProxy
 DOMAIN-SUFFIX,100ftv.com,ChinaProxy
 DOMAIN-SUFFIX,100fua.com,ChinaProxy
 DOMAIN-SUFFIX,100gcrc.com,ChinaProxy
@@ -4425,6 +4426,7 @@ DOMAIN-SUFFIX,101weiqi.com,ChinaProxy
 DOMAIN-SUFFIX,101zc.com,ChinaProxy
 DOMAIN-SUFFIX,1020m.com,ChinaProxy
 DOMAIN-SUFFIX,1024sj.com,ChinaProxy
+DOMAIN-SUFFIX,1024ss.com,ChinaProxy
 DOMAIN-SUFFIX,1024wan.com,ChinaProxy
 DOMAIN-SUFFIX,1026rc.com,ChinaProxy
 DOMAIN-SUFFIX,102cw.com,ChinaProxy
@@ -4468,6 +4470,7 @@ DOMAIN-SUFFIX,10vps.com,ChinaProxy
 DOMAIN-SUFFIX,10vs100.com,ChinaProxy
 DOMAIN-SUFFIX,10wallpaper.com,ChinaProxy
 DOMAIN-SUFFIX,10yan.com,ChinaProxy
+DOMAIN-SUFFIX,10yougame.com,ChinaProxy
 DOMAIN-SUFFIX,11.vc,ChinaProxy
 DOMAIN-SUFFIX,110.com,ChinaProxy
 DOMAIN-SUFFIX,1100lu.net,ChinaProxy
@@ -4622,6 +4625,7 @@ DOMAIN-SUFFIX,12226.com,ChinaProxy
 DOMAIN-SUFFIX,12227.com,ChinaProxy
 DOMAIN-SUFFIX,122311.com,ChinaProxy
 DOMAIN-SUFFIX,122park.com,ChinaProxy
+DOMAIN-SUFFIX,123.com,ChinaProxy
 DOMAIN-SUFFIX,123.msn,ChinaProxy
 DOMAIN-SUFFIX,12306.com,ChinaProxy
 DOMAIN-SUFFIX,12306bypass.com,ChinaProxy
@@ -5018,6 +5022,7 @@ DOMAIN-SUFFIX,178.fm,ChinaProxy
 DOMAIN-SUFFIX,178198.com,ChinaProxy
 DOMAIN-SUFFIX,17888.com,ChinaProxy
 DOMAIN-SUFFIX,178good.com,ChinaProxy
+DOMAIN-SUFFIX,178linux.com,ChinaProxy
 DOMAIN-SUFFIX,178online.com,ChinaProxy
 DOMAIN-SUFFIX,178zmy.com,ChinaProxy
 DOMAIN-SUFFIX,179.com,ChinaProxy
@@ -7824,6 +7829,7 @@ DOMAIN-SUFFIX,60dj.com,ChinaProxy
 DOMAIN-SUFFIX,60in.com,ChinaProxy
 DOMAIN-SUFFIX,60junshi.com,ChinaProxy
 DOMAIN-SUFFIX,60malaysia.com,ChinaProxy
+DOMAIN-SUFFIX,60mil.com,ChinaProxy
 DOMAIN-SUFFIX,60nm.com,ChinaProxy
 DOMAIN-SUFFIX,60pub.com,ChinaProxy
 DOMAIN-SUFFIX,60sky.com,ChinaProxy
@@ -8167,6 +8173,7 @@ DOMAIN-SUFFIX,7120.com,ChinaProxy
 DOMAIN-SUFFIX,712100.com,ChinaProxy
 DOMAIN-SUFFIX,71360.com,ChinaProxy
 DOMAIN-SUFFIX,714.hk,ChinaProxy
+DOMAIN-SUFFIX,715083.com,ChinaProxy
 DOMAIN-SUFFIX,715300.com,ChinaProxy
 DOMAIN-SUFFIX,7160.com,ChinaProxy
 DOMAIN-SUFFIX,7176.com,ChinaProxy
@@ -8964,6 +8971,7 @@ DOMAIN-SUFFIX,91doujin.com,ChinaProxy
 DOMAIN-SUFFIX,91dyl.com,ChinaProxy
 DOMAIN-SUFFIX,91feizhuliu.com,ChinaProxy
 DOMAIN-SUFFIX,91fifa.com,ChinaProxy
+DOMAIN-SUFFIX,91friend.com,ChinaProxy
 DOMAIN-SUFFIX,91game.com,ChinaProxy
 DOMAIN-SUFFIX,91gaoqing.com,ChinaProxy
 DOMAIN-SUFFIX,91gongjian.com,ChinaProxy
@@ -9806,6 +9814,7 @@ DOMAIN-SUFFIX,aepku.com,ChinaProxy
 DOMAIN-SUFFIX,aerfaying.com,ChinaProxy
 DOMAIN-SUFFIX,aerochina.net,ChinaProxy
 DOMAIN-SUFFIX,aeroimginfo.com,ChinaProxy
+DOMAIN-SUFFIX,aes01.com,ChinaProxy
 DOMAIN-SUFFIX,aetalk.org,ChinaProxy
 DOMAIN-SUFFIX,aevit.xyz,ChinaProxy
 DOMAIN-SUFFIX,af360.com,ChinaProxy
@@ -9840,6 +9849,7 @@ DOMAIN-SUFFIX,aglc.cc,ChinaProxy
 DOMAIN-SUFFIX,agmbet.com,ChinaProxy
 DOMAIN-SUFFIX,agoda.net,ChinaProxy
 DOMAIN-SUFFIX,agoodme.com,ChinaProxy
+DOMAIN-SUFFIX,agora.io,ChinaProxy
 DOMAIN-SUFFIX,agotools.com,ChinaProxy
 DOMAIN-SUFFIX,agouzq.com,ChinaProxy
 DOMAIN-SUFFIX,agrantsem.com,ChinaProxy
@@ -11475,6 +11485,7 @@ DOMAIN-SUFFIX,bdimg.com,ChinaProxy
 DOMAIN-SUFFIX,bditong.com,ChinaProxy
 DOMAIN-SUFFIX,bdkssc.com,ChinaProxy
 DOMAIN-SUFFIX,bdkyr.com,ChinaProxy
+DOMAIN-SUFFIX,bdlxwxw.com,ChinaProxy
 DOMAIN-SUFFIX,bdmod.com,ChinaProxy
 DOMAIN-SUFFIX,bdmryj.com,ChinaProxy
 DOMAIN-SUFFIX,bdpan.com,ChinaProxy
@@ -11796,6 +11807,7 @@ DOMAIN-SUFFIX,bingqipu.net,ChinaProxy
 DOMAIN-SUFFIX,bingyoulm.com,ChinaProxy
 DOMAIN-SUFFIX,binhuo.com,ChinaProxy
 DOMAIN-SUFFIX,binospace.com,ChinaProxy
+DOMAIN-SUFFIX,binwang.me,ChinaProxy
 DOMAIN-SUFFIX,binzhi.com,ChinaProxy
 DOMAIN-SUFFIX,binzhuang.com,ChinaProxy
 DOMAIN-SUFFIX,climatic.net,ChinaProxy
@@ -12093,6 +12105,7 @@ DOMAIN-SUFFIX,bluefocus.com,ChinaProxy
 DOMAIN-SUFFIX,bluehn.com,ChinaProxy
 DOMAIN-SUFFIX,blueidea.com,ChinaProxy
 DOMAIN-SUFFIX,bluek.org,ChinaProxy
+DOMAIN-SUFFIX,bluelive.me,ChinaProxy
 DOMAIN-SUFFIX,bluepai.com,ChinaProxy
 DOMAIN-SUFFIX,blueplus.cc,ChinaProxy
 DOMAIN-SUFFIX,bluereader.org,ChinaProxy
@@ -13187,6 +13200,7 @@ DOMAIN-SUFFIX,cfd163.com,ChinaProxy
 DOMAIN-SUFFIX,cfdaguanjia.com,ChinaProxy
 DOMAIN-SUFFIX,cfdp.org,ChinaProxy
 DOMAIN-SUFFIX,cfdtlee.com,ChinaProxy
+DOMAIN-SUFFIX,cferw.com,ChinaProxy
 DOMAIN-SUFFIX,cffw.net,ChinaProxy
 DOMAIN-SUFFIX,cfhot.com,ChinaProxy
 DOMAIN-SUFFIX,cfhpc.org,ChinaProxy
@@ -14294,6 +14308,7 @@ DOMAIN-SUFFIX,cignacmb.com,ChinaProxy
 DOMAIN-SUFFIX,cihexpo.com,ChinaProxy
 DOMAIN-SUFFIX,ciicgat.com,ChinaProxy
 DOMAIN-SUFFIX,expo.com,ChinaProxy
+DOMAIN-SUFFIX,ciimg.com,ChinaProxy
 DOMAIN-SUFFIX,cijian.us,ChinaProxy
 DOMAIN-SUFFIX,ciku5.com,ChinaProxy
 DOMAIN-SUFFIX,cilacila.com,ChinaProxy
@@ -14500,6 +14515,7 @@ DOMAIN-SUFFIX,cmread.com,ChinaProxy
 DOMAIN-SUFFIX,cmsboom.com,ChinaProxy
 DOMAIN-SUFFIX,cmsbs.com,ChinaProxy
 DOMAIN-SUFFIX,cmscmc.org,ChinaProxy
+DOMAIN-SUFFIX,cmsjournal.net,ChinaProxy
 DOMAIN-SUFFIX,cmstop.com,ChinaProxy
 DOMAIN-SUFFIX,cmt178.com,ChinaProxy
 DOMAIN-SUFFIX,cmu1h.com,ChinaProxy
@@ -14678,6 +14694,7 @@ DOMAIN-SUFFIX,cnfirst.org,ChinaProxy
 DOMAIN-SUFFIX,cnfla.com,ChinaProxy
 DOMAIN-SUFFIX,cnfmp.net,ChinaProxy
 DOMAIN-SUFFIX,cnfol.com,ChinaProxy
+DOMAIN-SUFFIX,cnfol.hk,ChinaProxy
 DOMAIN-SUFFIX,cnfolimg.com,ChinaProxy
 DOMAIN-SUFFIX,cnfoon.com,ChinaProxy
 DOMAIN-SUFFIX,cnforever.com,ChinaProxy
@@ -17316,6 +17333,7 @@ DOMAIN-SUFFIX,duzhoumo.com,ChinaProxy
 DOMAIN-SUFFIX,dv37.com,ChinaProxy
 DOMAIN-SUFFIX,dvbbs.net,ChinaProxy
 DOMAIN-SUFFIX,dvbcn.com,ChinaProxy
+DOMAIN-SUFFIX,dvblog.win,ChinaProxy
 DOMAIN-SUFFIX,dvd66.com,ChinaProxy
 DOMAIN-SUFFIX,dvd85.com,ChinaProxy
 DOMAIN-SUFFIX,dvd94.com,ChinaProxy
@@ -17844,6 +17862,7 @@ DOMAIN-SUFFIX,ehvacr.com,ChinaProxy
 DOMAIN-SUFFIX,eicbs.com,ChinaProxy
 DOMAIN-SUFFIX,eickaopei.com,ChinaProxy
 DOMAIN-SUFFIX,eiicn.com,ChinaProxy
+DOMAIN-SUFFIX,eiimg.com,ChinaProxy
 DOMAIN-SUFFIX,eiiq.com,ChinaProxy
 DOMAIN-SUFFIX,eikoco.com,ChinaProxy
 DOMAIN-SUFFIX,eimway.com,ChinaProxy
@@ -18469,6 +18488,7 @@ DOMAIN-SUFFIX,faqwork.com,ChinaProxy
 DOMAIN-SUFFIX,far2000.com,ChinaProxy
 DOMAIN-SUFFIX,farisl.com,ChinaProxy
 DOMAIN-SUFFIX,farmerzpl.com,ChinaProxy
+DOMAIN-SUFFIX,farvd.com,ChinaProxy
 DOMAIN-SUFFIX,fashangji.com,ChinaProxy
 DOMAIN-SUFFIX,fashaoyou.net,ChinaProxy
 DOMAIN-SUFFIX,fashuounion.com,ChinaProxy
@@ -18671,6 +18691,7 @@ DOMAIN-SUFFIX,fengmi.tv,ChinaProxy
 DOMAIN-SUFFIX,fengmi128.com,ChinaProxy
 DOMAIN-SUFFIX,fengmk2.com,ChinaProxy
 DOMAIN-SUFFIX,fengniao.com,ChinaProxy
+DOMAIN-SUFFIX,fengniaoidc.com,ChinaProxy
 DOMAIN-SUFFIX,fengniaojr.com,ChinaProxy
 DOMAIN-SUFFIX,fengone.com,ChinaProxy
 DOMAIN-SUFFIX,fengqiyc.com,ChinaProxy
@@ -19673,6 +19694,7 @@ DOMAIN-SUFFIX,geeseteam.com,ChinaProxy
 DOMAIN-SUFFIX,geetest.com,ChinaProxy
 DOMAIN-SUFFIX,geewaza.com,ChinaProxy
 DOMAIN-SUFFIX,geezclick.com,ChinaProxy
+DOMAIN-SUFFIX,gefan1688.com,ChinaProxy
 DOMAIN-SUFFIX,gege.la,ChinaProxy
 DOMAIN-SUFFIX,gegehei.com,ChinaProxy
 DOMAIN-SUFFIX,gegejia.com,ChinaProxy
@@ -19822,6 +19844,7 @@ DOMAIN-SUFFIX,gissky.net,ChinaProxy
 DOMAIN-SUFFIX,gitcafe.com,ChinaProxy
 DOMAIN-SUFFIX,gitcod.com,ChinaProxy
 DOMAIN-SUFFIX,gitee.com,ChinaProxy
+DOMAIN-SUFFIX,gitee.io,ChinaProxy
 DOMAIN-SUFFIX,gitlab.cc,ChinaProxy
 DOMAIN-SUFFIX,gitshell.com,ChinaProxy
 DOMAIN-SUFFIX,gitshu.com,ChinaProxy
@@ -21100,6 +21123,7 @@ DOMAIN-SUFFIX,hcyacg.com,ChinaProxy
 DOMAIN-SUFFIX,hcyy.org,ChinaProxy
 DOMAIN-SUFFIX,hczc.com,ChinaProxy
 DOMAIN-SUFFIX,cdn.com,ChinaProxy
+DOMAIN-SUFFIX,tvb.com,ChinaProxy
 DOMAIN-SUFFIX,hd.cm,ChinaProxy
 DOMAIN-SUFFIX,hd00.com,ChinaProxy
 DOMAIN-SUFFIX,hd3p.com,ChinaProxy
@@ -22000,6 +22024,7 @@ DOMAIN-SUFFIX,huadoo.com,ChinaProxy
 DOMAIN-SUFFIX,huadunk.com,ChinaProxy
 DOMAIN-SUFFIX,huadutuopan.com,ChinaProxy
 DOMAIN-SUFFIX,huaer.cc,ChinaProxy
+DOMAIN-SUFFIX,huafens.com,ChinaProxy
 DOMAIN-SUFFIX,huagu.com,ChinaProxy
 DOMAIN-SUFFIX,huaguo.com,ChinaProxy
 DOMAIN-SUFFIX,huaguoshan.com,ChinaProxy
@@ -22292,6 +22317,7 @@ DOMAIN-SUFFIX,huomaotv.com,ChinaProxy
 DOMAIN-SUFFIX,huopao.com,ChinaProxy
 DOMAIN-SUFFIX,huopinjie.com,ChinaProxy
 DOMAIN-SUFFIX,huoshan.cc,ChinaProxy
+DOMAIN-SUFFIX,huoshan.com,ChinaProxy
 DOMAIN-SUFFIX,huoshen.com,ChinaProxy
 DOMAIN-SUFFIX,huoshen.net,ChinaProxy
 DOMAIN-SUFFIX,huosu.com,ChinaProxy
@@ -22764,6 +22790,7 @@ DOMAIN-SUFFIX,idqqimg.com,ChinaProxy
 DOMAIN-SUFFIX,idreamsky.com,ChinaProxy
 DOMAIN-SUFFIX,idscn.com,ChinaProxy
 DOMAIN-SUFFIX,idspub.net,ChinaProxy
+DOMAIN-SUFFIX,idsuipai.com,ChinaProxy
 DOMAIN-SUFFIX,idting.com,ChinaProxy
 DOMAIN-SUFFIX,iduobao.net,ChinaProxy
 DOMAIN-SUFFIX,iduokan.net,ChinaProxy
@@ -23454,6 +23481,7 @@ DOMAIN-SUFFIX,itdaan.com,ChinaProxy
 DOMAIN-SUFFIX,itdadao.com,ChinaProxy
 DOMAIN-SUFFIX,itdcw.com,ChinaProxy
 DOMAIN-SUFFIX,itdiffer.com,ChinaProxy
+DOMAIN-SUFFIX,itdks.com,ChinaProxy
 DOMAIN-SUFFIX,itdog.moe,ChinaProxy
 DOMAIN-SUFFIX,itdos.com,ChinaProxy
 DOMAIN-SUFFIX,itdos.net,ChinaProxy
@@ -23655,6 +23683,7 @@ DOMAIN-SUFFIX,ixiangyu.com,ChinaProxy
 DOMAIN-SUFFIX,ixiaolu.com,ChinaProxy
 DOMAIN-SUFFIX,ixiaomo.net,ChinaProxy
 DOMAIN-SUFFIX,ixidian.org,ChinaProxy
+DOMAIN-SUFFIX,ixigua.com,ChinaProxy
 DOMAIN-SUFFIX,iximo.com,ChinaProxy
 DOMAIN-SUFFIX,ixingji.com,ChinaProxy
 DOMAIN-SUFFIX,ixinglu.com,ChinaProxy
@@ -24478,6 +24507,7 @@ DOMAIN-SUFFIX,jjword.com,ChinaProxy
 DOMAIN-SUFFIX,jjwxc.com,ChinaProxy
 DOMAIN-SUFFIX,jjwxc.net,ChinaProxy
 DOMAIN-SUFFIX,jjwxc.org,ChinaProxy
+DOMAIN-SUFFIX,jjxgly.com,ChinaProxy
 DOMAIN-SUFFIX,jjxj.org,ChinaProxy
 DOMAIN-SUFFIX,jjxwzk.org,ChinaProxy
 DOMAIN-SUFFIX,jjxyls.com,ChinaProxy
@@ -26655,6 +26685,7 @@ DOMAIN-SUFFIX,lifeweeker.com,ChinaProxy
 DOMAIN-SUFFIX,lifeyk.com,ChinaProxy
 DOMAIN-SUFFIX,lifox.net,ChinaProxy
 DOMAIN-SUFFIX,lifushop.com,ChinaProxy
+DOMAIN-SUFFIX,ligengmin.com,ChinaProxy
 DOMAIN-SUFFIX,lightalk.com,ChinaProxy
 DOMAIN-SUFFIX,lightcss.com,ChinaProxy
 DOMAIN-SUFFIX,lightfire.cc,ChinaProxy
@@ -29454,6 +29485,7 @@ DOMAIN-SUFFIX,nikest.com,ChinaProxy
 DOMAIN-SUFFIX,nikestore.us,ChinaProxy
 DOMAIN-SUFFIX,nilai.com,ChinaProxy
 DOMAIN-SUFFIX,nilegu.com,ChinaProxy
+DOMAIN-SUFFIX,nima.hk,ChinaProxy
 DOMAIN-SUFFIX,nima.wang,ChinaProxy
 DOMAIN-SUFFIX,nimingban.com,ChinaProxy
 DOMAIN-SUFFIX,ningbofy.com,ChinaProxy
@@ -29790,6 +29822,7 @@ DOMAIN-SUFFIX,odao.com,ChinaProxy
 DOMAIN-SUFFIX,odict.net,ChinaProxy
 DOMAIN-SUFFIX,odinliu.com,ChinaProxy
 DOMAIN-SUFFIX,odkah.com,ChinaProxy
+DOMAIN-SUFFIX,odx7.com,ChinaProxy
 DOMAIN-SUFFIX,oeeee.com,ChinaProxy
 DOMAIN-SUFFIX,oekaki.so,ChinaProxy
 DOMAIN-SUFFIX,oemghost.com,ChinaProxy
@@ -32083,6 +32116,7 @@ DOMAIN-SUFFIX,renhao.org,ChinaProxy
 DOMAIN-SUFFIX,renji.com,ChinaProxy
 DOMAIN-SUFFIX,renjian.com,ChinaProxy
 DOMAIN-SUFFIX,renjiyiyuan.com,ChinaProxy
+DOMAIN-SUFFIX,renliwo.com,ChinaProxy
 DOMAIN-SUFFIX,renmaiku.com,ChinaProxy
 DOMAIN-SUFFIX,renminkaiguan.com,ChinaProxy
 DOMAIN-SUFFIX,renqi8.com,ChinaProxy
@@ -32428,6 +32462,7 @@ DOMAIN-SUFFIX,rzx.me,ChinaProxy
 DOMAIN-SUFFIX,rzydq.com,ChinaProxy
 DOMAIN-SUFFIX,s.pw,ChinaProxy
 DOMAIN-SUFFIX,s.jimdo,ChinaProxy
+DOMAIN-SUFFIX,s0m30ne.com,ChinaProxy
 DOMAIN-SUFFIX,s1119.com,ChinaProxy
 DOMAIN-SUFFIX,s135.com,ChinaProxy
 DOMAIN-SUFFIX,s1979.com,ChinaProxy
@@ -32703,6 +32738,7 @@ DOMAIN-SUFFIX,se7enzone.com,ChinaProxy
 DOMAIN-SUFFIX,gullmall.com,ChinaProxy
 DOMAIN-SUFFIX,sea789.com,ChinaProxy
 DOMAIN-SUFFIX,seacha.com,ChinaProxy
+DOMAIN-SUFFIX,seamanhome.com,ChinaProxy
 DOMAIN-SUFFIX,seanlook.com,ChinaProxy
 DOMAIN-SUFFIX,seanyxie.com,ChinaProxy
 DOMAIN-SUFFIX,search1990.com,ChinaProxy
@@ -32723,6 +32759,7 @@ DOMAIN-SUFFIX,secutimes.com,ChinaProxy
 DOMAIN-SUFFIX,secwk.com,ChinaProxy
 DOMAIN-SUFFIX,say.com,ChinaProxy
 DOMAIN-SUFFIX,see2know.com,ChinaProxy
+DOMAIN-SUFFIX,seebug.org,ChinaProxy
 DOMAIN-SUFFIX,seebuu.com,ChinaProxy
 DOMAIN-SUFFIX,seebyleegee.com,ChinaProxy
 DOMAIN-SUFFIX,seedit.cc,ChinaProxy
@@ -32937,6 +32974,7 @@ DOMAIN-SUFFIX,shangxiasha.com,ChinaProxy
 DOMAIN-SUFFIX,shangxueba.com,ChinaProxy
 DOMAIN-SUFFIX,shangyekj.com,ChinaProxy
 DOMAIN-SUFFIX,shangyitou.com,ChinaProxy
+DOMAIN-SUFFIX,shangzhibo.tv,ChinaProxy
 DOMAIN-SUFFIX,shanhaizhanji.com,ChinaProxy
 DOMAIN-SUFFIX,shanhe.cc,ChinaProxy
 DOMAIN-SUFFIX,shanhuojiaoyi.com,ChinaProxy
@@ -34541,6 +34579,7 @@ DOMAIN-SUFFIX,sxrsj.net,ChinaProxy
 DOMAIN-SUFFIX,sxsgf.com,ChinaProxy
 DOMAIN-SUFFIX,sxshh.com,ChinaProxy
 DOMAIN-SUFFIX,sxshu.com,ChinaProxy
+DOMAIN-SUFFIX,sxsim.com,ChinaProxy
 DOMAIN-SUFFIX,sxsimg.com,ChinaProxy
 DOMAIN-SUFFIX,sxsoft.com,ChinaProxy
 DOMAIN-SUFFIX,sxtvs.com,ChinaProxy
@@ -34580,6 +34619,7 @@ DOMAIN-SUFFIX,syitu.com,ChinaProxy
 DOMAIN-SUFFIX,syjiancai.com,ChinaProxy
 DOMAIN-SUFFIX,sykong.com,ChinaProxy
 DOMAIN-SUFFIX,sylds.com,ChinaProxy
+DOMAIN-SUFFIX,syleshang.com,ChinaProxy
 DOMAIN-SUFFIX,symama.com,ChinaProxy
 DOMAIN-SUFFIX,symaosheng.com,ChinaProxy
 DOMAIN-SUFFIX,symuge.com,ChinaProxy
@@ -34750,6 +34790,7 @@ DOMAIN-SUFFIX,t3nlink.com,ChinaProxy
 DOMAIN-SUFFIX,t522.com,ChinaProxy
 DOMAIN-SUFFIX,t56.net,ChinaProxy
 DOMAIN-SUFFIX,t888w.com,ChinaProxy
+DOMAIN-SUFFIX,t98u8f.com,ChinaProxy
 DOMAIN-SUFFIX,ta26.com,ChinaProxy
 DOMAIN-SUFFIX,ta80.com,ChinaProxy
 DOMAIN-SUFFIX,taclub.net,ChinaProxy
@@ -35341,6 +35382,7 @@ DOMAIN-SUFFIX,tigerbrokers.com,ChinaProxy
 DOMAIN-SUFFIX,tigerbrokers.net,ChinaProxy
 DOMAIN-SUFFIX,tigtag.com,ChinaProxy
 DOMAIN-SUFFIX,tiiker.com,ChinaProxy
+DOMAIN-SUFFIX,tiimg.com,ChinaProxy
 DOMAIN-SUFFIX,tijiyi.com,ChinaProxy
 DOMAIN-SUFFIX,tikikm.com,ChinaProxy
 DOMAIN-SUFFIX,tikubaba.com,ChinaProxy
@@ -35925,6 +35967,7 @@ DOMAIN-SUFFIX,tuili8.com,ChinaProxy
 DOMAIN-SUFFIX,tuilisr.com,ChinaProxy
 DOMAIN-SUFFIX,tuiliu.net,ChinaProxy
 DOMAIN-SUFFIX,tuimz.com,ChinaProxy
+DOMAIN-SUFFIX,tuirice.com,ChinaProxy
 DOMAIN-SUFFIX,tuishao.net,ChinaProxy
 DOMAIN-SUFFIX,tuishiben.com,ChinaProxy
 DOMAIN-SUFFIX,tuisir.com,ChinaProxy
@@ -35996,6 +36039,7 @@ DOMAIN-SUFFIX,tuyoujp.com,ChinaProxy
 DOMAIN-SUFFIX,tuyoumi.com,ChinaProxy
 DOMAIN-SUFFIX,tuzhan.com,ChinaProxy
 DOMAIN-SUFFIX,tuzhan.net,ChinaProxy
+DOMAIN-SUFFIX,tuzi123.com,ChinaProxy
 DOMAIN-SUFFIX,tuzi8.com,ChinaProxy
 DOMAIN-SUFFIX,tv002.com,ChinaProxy
 DOMAIN-SUFFIX,tv189.com,ChinaProxy
@@ -36602,6 +36646,7 @@ DOMAIN-SUFFIX,v3gp.com,ChinaProxy
 DOMAIN-SUFFIX,v3sm.com,ChinaProxy
 DOMAIN-SUFFIX,v3v3.net,ChinaProxy
 DOMAIN-SUFFIX,v4.cc,ChinaProxy
+DOMAIN-SUFFIX,v4dwkcv.com,ChinaProxy
 DOMAIN-SUFFIX,v4la.com,ChinaProxy
 DOMAIN-SUFFIX,v525.com,ChinaProxy
 DOMAIN-SUFFIX,v54321.com,ChinaProxy
@@ -38207,6 +38252,7 @@ DOMAIN-SUFFIX,wpsmail.net,ChinaProxy
 DOMAIN-SUFFIX,wpxap.com,ChinaProxy
 DOMAIN-SUFFIX,wpxap.mobi,ChinaProxy
 DOMAIN-SUFFIX,wpyou.com,ChinaProxy
+DOMAIN-SUFFIX,wq96f9.com,ChinaProxy
 DOMAIN-SUFFIX,wqc.so,ChinaProxy
 DOMAIN-SUFFIX,wqcips.com,ChinaProxy
 DOMAIN-SUFFIX,wqcms.com,ChinaProxy
@@ -38323,6 +38369,7 @@ DOMAIN-SUFFIX,wujinzone.org,ChinaProxy
 DOMAIN-SUFFIX,wujiyou.com,ChinaProxy
 DOMAIN-SUFFIX,wujn.me,ChinaProxy
 DOMAIN-SUFFIX,wujunze.com,ChinaProxy
+DOMAIN-SUFFIX,wukong.com,ChinaProxy
 DOMAIN-SUFFIX,wukongdb.com,ChinaProxy
 DOMAIN-SUFFIX,wukonglicai.com,ChinaProxy
 DOMAIN-SUFFIX,wukongshuo.com,ChinaProxy
@@ -38639,6 +38686,7 @@ DOMAIN-SUFFIX,xdjsq.com,ChinaProxy
 DOMAIN-SUFFIX,xdjy369.com,ChinaProxy
 DOMAIN-SUFFIX,xdkb.net,ChinaProxy
 DOMAIN-SUFFIX,xdkjpx.com,ChinaProxy
+DOMAIN-SUFFIX,xdm20.com,ChinaProxy
 DOMAIN-SUFFIX,xdmnyy.com,ChinaProxy
 DOMAIN-SUFFIX,xdnice.com,ChinaProxy
 DOMAIN-SUFFIX,xdoor.cc,ChinaProxy
@@ -38678,6 +38726,7 @@ DOMAIN-SUFFIX,xfplay.com,ChinaProxy
 DOMAIN-SUFFIX,xfpllay.com,ChinaProxy
 DOMAIN-SUFFIX,xfsrrc.net,ChinaProxy
 DOMAIN-SUFFIX,xfsub.com,ChinaProxy
+DOMAIN-SUFFIX,xftclub.com,ChinaProxy
 DOMAIN-SUFFIX,xftnam.com,ChinaProxy
 DOMAIN-SUFFIX,xfwed.com,ChinaProxy
 DOMAIN-SUFFIX,xfzhsf.com,ChinaProxy
@@ -38955,6 +39004,7 @@ DOMAIN-SUFFIX,xiaoyuzhuanqian.com,ChinaProxy
 DOMAIN-SUFFIX,xiaozhan.cc,ChinaProxy
 DOMAIN-SUFFIX,xiaozhaozhushou.com,ChinaProxy
 DOMAIN-SUFFIX,xiaozhiyun.com,ChinaProxy
+DOMAIN-SUFFIX,xiaozhonghe.com,ChinaProxy
 DOMAIN-SUFFIX,xiaozhou.net,ChinaProxy
 DOMAIN-SUFFIX,xiaozhu.com,ChinaProxy
 DOMAIN-SUFFIX,xiaozhu168.com,ChinaProxy
@@ -40046,6 +40096,7 @@ DOMAIN-SUFFIX,yead.net,ChinaProxy
 DOMAIN-SUFFIX,yeah.net,ChinaProxy
 DOMAIN-SUFFIX,yeahka.com,ChinaProxy
 DOMAIN-SUFFIX,yeahworld.com,ChinaProxy
+DOMAIN-SUFFIX,yeai.com,ChinaProxy
 DOMAIN-SUFFIX,yechengfu.com,ChinaProxy
 DOMAIN-SUFFIX,yedingding.com,ChinaProxy
 DOMAIN-SUFFIX,yeds.net,ChinaProxy
@@ -41523,6 +41574,7 @@ DOMAIN-SUFFIX,zbzw.com,ChinaProxy
 DOMAIN-SUFFIX,zc4u.com,ChinaProxy
 DOMAIN-SUFFIX,zc600.com,ChinaProxy
 DOMAIN-SUFFIX,zcccc.com,ChinaProxy
+DOMAIN-SUFFIX,zccrs.com,ChinaProxy
 DOMAIN-SUFFIX,zcdog.com,ChinaProxy
 DOMAIN-SUFFIX,zcgfgh.com,ChinaProxy
 DOMAIN-SUFFIX,zcifc.com,ChinaProxy
