--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -38,7 +38,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-11-01 16:51:50
+// updated on 2017-11-07 17:33:40
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -976,6 +976,7 @@ DOMAIN-KEYWORD,dnserror,REJECT
 DOMAIN-KEYWORD,domob,REJECT
 DOMAIN-KEYWORD,duomeng,REJECT
 DOMAIN-KEYWORD,dwtrack,REJECT
+DOMAIN-KEYWORD,flurry.co,REJECT
 DOMAIN-KEYWORD,guanggao,REJECT
 DOMAIN-KEYWORD,inmobi,REJECT
 DOMAIN-KEYWORD,lianmeng,REJECT
@@ -1319,6 +1320,7 @@ DOMAIN-SUFFIX,ad.360yield.com,REJECT
 DOMAIN-SUFFIX,ad.95306.cn,REJECT
 DOMAIN-SUFFIX,ad.about.co.kr,REJECT
 DOMAIN-SUFFIX,ad.accessmediaproductions.com,REJECT
+DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.bitmedia.io,REJECT
 DOMAIN-SUFFIX,ad.bjmama.net,REJECT
 DOMAIN-SUFFIX,ad.cctv.com,REJECT
@@ -1438,6 +1440,7 @@ DOMAIN-SUFFIX,adm.xmfish.com,REJECT
 DOMAIN-SUFFIX,adm.zbinfo.net,REJECT
 DOMAIN-SUFFIX,admaji.com,REJECT
 DOMAIN-SUFFIX,admarvel.com,REJECT
+DOMAIN-SUFFIX,admaster.com.cn,REJECT
 DOMAIN-SUFFIX,admd.yam.com,REJECT
 DOMAIN-SUFFIX,admedia.com,REJECT
 DOMAIN-SUFFIX,admeta.vo.llnwd.net,REJECT
@@ -1469,6 +1472,7 @@ DOMAIN-SUFFIX,ads.feedly.com,REJECT
 DOMAIN-SUFFIX,ads.genieessp.com,REJECT
 DOMAIN-SUFFIX,ads.heyzap.com,REJECT
 DOMAIN-SUFFIX,ads.mobclix.com,REJECT
+DOMAIN-SUFFIX,ads.mopub.com,REJECT
 DOMAIN-SUFFIX,ads.mp.mydas.mobi,REJECT
 DOMAIN-SUFFIX,ads.newtentionassets.net,REJECT
 DOMAIN-SUFFIX,ads.nexage.com,REJECT
@@ -1484,6 +1488,8 @@ DOMAIN-SUFFIX,ads.zynga.com,REJECT
 DOMAIN-SUFFIX,ads360.cn,REJECT
 DOMAIN-SUFFIX,ads8.com,REJECT
 DOMAIN-SUFFIX,ads80.com,REJECT
+DOMAIN-SUFFIX,adsage.cn,REJECT
+DOMAIN-SUFFIX,adsage.com,REJECT
 DOMAIN-SUFFIX,adsame.com,REJECT
 DOMAIN-SUFFIX,adsame1.cnr.cn,REJECT
 DOMAIN-SUFFIX,adsatt.abcnews.starwave.com,REJECT
@@ -1497,6 +1503,7 @@ DOMAIN-SUFFIX,adshost2.com,REJECT
 DOMAIN-SUFFIX,adshows.21cn.com,REJECT
 DOMAIN-SUFFIX,adsinstant.com,REJECT
 DOMAIN-SUFFIX,adsmogo.com,REJECT
+DOMAIN-SUFFIX,adsmogo.org,REJECT
 DOMAIN-SUFFIX,adsor.openrunner.com,REJECT
 DOMAIN-SUFFIX,adsp.xunlei.com,REJECT
 DOMAIN-SUFFIX,adsrich.qq.com,REJECT
@@ -1907,9 +1914,11 @@ DOMAIN-SUFFIX,creatives.pichunter.com,REJECT
 DOMAIN-SUFFIX,creatives.summitconnect.co.uk,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
 DOMAIN-SUFFIX,crl.microsoft.com,REJECT
+DOMAIN-SUFFIX,cr-nielsen.com,REJECT
 DOMAIN-SUFFIX,crosschannel.com,REJECT
 DOMAIN-SUFFIX,crs.baidu.com,REJECT
 DOMAIN-SUFFIX,csad.cc,REJECT
+DOMAIN-SUFFIX,csi.gstatic.com,REJECT
 DOMAIN-SUFFIX,csqiulong.com,REJECT
 DOMAIN-SUFFIX,cstoa.com,REJECT
 DOMAIN-SUFFIX,csxjys.com,REJECT
@@ -2074,6 +2083,8 @@ DOMAIN-SUFFIX,dugbvb.com,REJECT
 DOMAIN-SUFFIX,duiwai.baidu.com,REJECT
 DOMAIN-SUFFIX,dumedia.ru,REJECT
 DOMAIN-SUFFIX,duomeng.cn,REJECT
+DOMAIN-SUFFIX,duomeng.net,REJECT
+DOMAIN-SUFFIX,duomeng.org,REJECT
 DOMAIN-SUFFIX,duoyidd.com,REJECT
 DOMAIN-SUFFIX,dup.baidustatic.com,REJECT
 DOMAIN-SUFFIX,dushimj.com,REJECT
@@ -2108,6 +2119,7 @@ DOMAIN-SUFFIX,e9377f.com,REJECT
 DOMAIN-SUFFIX,eacash.streamplay.to,REJECT
 DOMAIN-SUFFIX,eap.big5.enorth.com.cn,REJECT
 DOMAIN-SUFFIX,eap.enorth.com.cn,REJECT
+DOMAIN-SUFFIX,eclick.baidu.com,REJECT
 DOMAIN-SUFFIX,eclkspbn.com,REJECT
 DOMAIN-SUFFIX,ecma.bdimg.com,REJECT
 DOMAIN-SUFFIX,ecmb.bdimg.com,REJECT
@@ -2180,6 +2192,7 @@ DOMAIN-SUFFIX,fjkst.com,REJECT
 DOMAIN-SUFFIX,fjmeyer.com,REJECT
 DOMAIN-SUFFIX,flashtalking.com,REJECT
 DOMAIN-SUFFIX,flowcodeapp.com,REJECT
+DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,fmgoal.com,REJECT
 DOMAIN-SUFFIX,fnkjj.com,REJECT
 DOMAIN-SUFFIX,focusprolight.com,REJECT
@@ -2273,6 +2286,7 @@ DOMAIN-SUFFIX,gma1.com,REJECT
 DOMAIN-SUFFIX,go.hangzhou.com.cn,REJECT
 DOMAIN-SUFFIX,godloveme.cn,REJECT
 DOMAIN-SUFFIX,go-mpulse.net,REJECT
+DOMAIN-SUFFIX,googeadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlealiyun.cn,REJECT
 DOMAIN-SUFFIX,googletakes.com,REJECT
 DOMAIN-SUFFIX,goto.www.iciba.com,REJECT
@@ -2380,11 +2394,11 @@ DOMAIN-SUFFIX,hzaibi.com,REJECT
 DOMAIN-SUFFIX,hzhyhm.com,REJECT
 DOMAIN-SUFFIX,i.syasn.com,REJECT
 DOMAIN-SUFFIX,i.zhuoyaju.com,REJECT
-DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
 DOMAIN-SUFFIX,i3818.com,REJECT
 DOMAIN-SUFFIX,i92xue.com,REJECT
 DOMAIN-SUFFIX,iadc.qwapi.com,REJECT
 DOMAIN-SUFFIX,iads.xinmin.cn,REJECT
+DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 DOMAIN-SUFFIX,ibanners.empoweredcomms.com.au,REJECT
 DOMAIN-SUFFIX,icast.cn,REJECT
 DOMAIN-SUFFIX,id528.com,REJECT
@@ -2426,6 +2440,7 @@ DOMAIN-SUFFIX,img6.126.net,REJECT
 DOMAIN-SUFFIX,img80.net,REJECT
 DOMAIN-SUFFIX,immob.cn,REJECT
 DOMAIN-SUFFIX,imneinei.com,REJECT
+DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
 DOMAIN-SUFFIX,imrworldwide.com,REJECT
 DOMAIN-SUFFIX,in.zog.link,REJECT
 DOMAIN-SUFFIX,inad.com,REJECT
@@ -2668,6 +2683,7 @@ DOMAIN-SUFFIX,lyrymy.com,REJECT
 DOMAIN-SUFFIX,lytubaobao.com,REJECT
 DOMAIN-SUFFIX,lzjycy.com,REJECT
 DOMAIN-SUFFIX,lzmm8.com,REJECT
+DOMAIN-SUFFIX,m.simaba.taobao.com,REJECT
 DOMAIN-SUFFIX,ma1.meishij.net,REJECT
 DOMAIN-SUFFIX,madhouse.cn,REJECT
 DOMAIN-SUFFIX,madmini.com,REJECT
@@ -2711,6 +2727,7 @@ DOMAIN-SUFFIX,mgid.com,REJECT
 DOMAIN-SUFFIX,mgogo.com,REJECT
 DOMAIN-SUFFIX,mgwcn.com,REJECT
 DOMAIN-SUFFIX,mgwl668.com,REJECT
+DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,miaozhen.com,REJECT
 DOMAIN-SUFFIX,microad-cn.com,REJECT
 DOMAIN-SUFFIX,miidi.net,REJECT
@@ -2723,6 +2740,7 @@ DOMAIN-SUFFIX,miniye.xjts.cn,REJECT
 DOMAIN-SUFFIX,mixpanel.com,REJECT
 DOMAIN-SUFFIX,mm.anqu.com,REJECT
 DOMAIN-SUFFIX,mmcc.yxlady.com,REJECT
+DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,mng-ads.com,REJECT
 DOMAIN-SUFFIX,mnkan.com,REJECT
 DOMAIN-SUFFIX,mnwan.com,REJECT
@@ -2741,6 +2759,7 @@ DOMAIN-SUFFIX,mobiorg8.com,REJECT
 DOMAIN-SUFFIX,mobisage.cn,REJECT
 DOMAIN-SUFFIX,mobvista.com,REJECT
 DOMAIN-SUFFIX,money.qz828.com,REJECT
+DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
 DOMAIN-SUFFIX,moodoocrv.com.cn,REJECT
 DOMAIN-SUFFIX,mookie1.com,REJECT
 DOMAIN-SUFFIX,moonwish.com.cn,REJECT
@@ -2755,9 +2774,11 @@ DOMAIN-SUFFIX,mpush.cn,REJECT
 DOMAIN-SUFFIX,mrksys.com,REJECT
 DOMAIN-SUFFIX,msads.net,REJECT
 DOMAIN-SUFFIX,mscimg.com,REJECT
+DOMAIN-SUFFIX,msga.71.am,REJECT
 DOMAIN-SUFFIX,msltzer.cn,REJECT
 DOMAIN-SUFFIX,mstzym.com,REJECT
 DOMAIN-SUFFIX,msypr.com,REJECT
+DOMAIN-SUFFIX,mtj.baidu.com,REJECT
 DOMAIN-SUFFIX,mtxsk.com,REJECT
 DOMAIN-SUFFIX,mwlucuvbyrff.com,REJECT
 DOMAIN-SUFFIX,mxmrt.com,REJECT
@@ -2901,6 +2922,7 @@ DOMAIN-SUFFIX,pic.fengniao.com,REJECT
 DOMAIN-SUFFIX,picsinfog.com,REJECT
 DOMAIN-SUFFIX,pingbi.diudou.com,REJECT
 DOMAIN-SUFFIX,pingdom.net,REJECT
+DOMAIN-SUFFIX,pingjs.qq.com,REJECT
 DOMAIN-SUFFIX,pingshetrip.com,REJECT
 DOMAIN-SUFFIX,pixel.rubiconproject.com,REJECT
 DOMAIN-SUFFIX,pixel.wp.com,REJECT
@@ -3250,6 +3272,7 @@ DOMAIN-SUFFIX,tbjfw.com,REJECT
 DOMAIN-SUFFIX,tc600.com,REJECT
 DOMAIN-SUFFIX,tcjy66.cc,REJECT
 DOMAIN-SUFFIX,tdayi.com,REJECT
+DOMAIN-SUFFIX,temp.163.com,REJECT
 DOMAIN-SUFFIX,tencentmind.com,REJECT
 DOMAIN-SUFFIX,tg.1155t.cn,REJECT
 DOMAIN-SUFFIX,tg.52digua.com,REJECT
@@ -3327,7 +3350,9 @@ DOMAIN-SUFFIX,uimserv.net,REJECT
 DOMAIN-SUFFIX,ujian.cc,REJECT
 DOMAIN-SUFFIX,ujikdd041o.cn,REJECT
 DOMAIN-SUFFIX,ukeiae.com,REJECT
+DOMAIN-SUFFIX,umeng.co,REJECT
 DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,umeng.net,REJECT
 DOMAIN-SUFFIX,umtrack.com,REJECT
 DOMAIN-SUFFIX,umyai.com,REJECT
 DOMAIN-SUFFIX,un1.takefoto.cn,REJECT
@@ -3458,6 +3483,7 @@ DOMAIN-SUFFIX,www.32414.com,REJECT
 DOMAIN-SUFFIX,www.cliushow.com,REJECT
 DOMAIN-SUFFIX,www.hhlian.com,REJECT
 DOMAIN-SUFFIX,www.hi686.com,REJECT
+DOMAIN-SUFFIX,www.panoramio.com,REJECT
 DOMAIN-SUFFIX,www.you1ad.com,REJECT
 DOMAIN-SUFFIX,wyhzzy.com,REJECT
 DOMAIN-SUFFIX,wyttech.cn,REJECT
@@ -3698,7 +3724,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-11-01 16:51:48
+// updated on 2017-11-07 17:33:39
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -3845,7 +3871,6 @@ DOMAIN-SUFFIX,rdio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,riseup.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sadistic-v.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,search.xxx,Proxy,force-remote-dns
-DOMAIN-SUFFIX,shutterstock.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,slacker.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sm-miracle.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,spotify.com,Proxy,force-remote-dns
@@ -3892,7 +3917,9 @@ DOMAIN-SUFFIX,boomssr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jiji.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,line-scdn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cloud.mail.ru,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cdn-images.mailchimp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,go.nesnode.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nikkei.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pixiv.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,i.lithium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,china-mmm.jp.net,Proxy,force-remote-dns
@@ -4266,6 +4293,7 @@ DOMAIN-SUFFIX,html5rocks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iam.soy,Proxy,force-remote-dns
 DOMAIN-SUFFIX,igoogle.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,itasoftware.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,lers.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,like.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,madewithcode.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,material.io,Proxy,force-remote-dns
@@ -4441,6 +4469,7 @@ DOMAIN-SUFFIX,3proxy.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,3ren.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,3tui.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4bluestones.biz,Proxy,force-remote-dns
+DOMAIN-SUFFIX,4chan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4everproxy.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4rbtv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4shared.com,Proxy,force-remote-dns
@@ -4760,6 +4789,7 @@ DOMAIN-SUFFIX,bigsound.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,billypan.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,billywr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,binux.me,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ai.binwang.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bipic.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bit.do,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bit.ly,Proxy,force-remote-dns
@@ -5187,6 +5217,7 @@ DOMAIN-SUFFIX,dadazim.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dadi360.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dafagood.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dafahao.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dafoh.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dagelijksestandaard.nl,Proxy,force-remote-dns
 DOMAIN-SUFFIX,daidostup.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dailidaili.com,Proxy,force-remote-dns
@@ -5505,6 +5536,7 @@ DOMAIN-SUFFIX,faluninfo.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falunpilipinas.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,falunworld.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,familyfed.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,fangeming.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanglizhi.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangongheike.com,Proxy,force-remote-dns
@@ -5519,7 +5551,6 @@ DOMAIN-SUFFIX,fail.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,famunion.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fan-qiang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangbinxing.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,fangeming.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangmincn.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanhaodang.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fanswong.com,Proxy,force-remote-dns
@@ -7407,6 +7438,7 @@ DOMAIN-SUFFIX,rtycminnesota.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ruanyifeng.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rukor.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rushbee.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ruten.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rutube.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ruyiseek.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rxhj.net,Proxy,force-remote-dns
@@ -7530,6 +7562,7 @@ DOMAIN-SUFFIX,shop2000.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shopping.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,showhaotu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,showtime.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,shutterstock.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ch.shvoong.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,shwchurch.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.shwchurch.org,Proxy,force-remote-dns
@@ -7674,6 +7707,7 @@ DOMAIN-SUFFIX,sproutcore.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sproxy.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,srocket.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ss-link.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ssglobal.co,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ssglobal.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ssh91.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sspro.ml,Proxy,force-remote-dns
@@ -8014,6 +8048,7 @@ DOMAIN-SUFFIX,torrenty.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,torrentz.eu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,torvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,totalvpn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,toutiaoabc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,towngain.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,toypark.in,Proxy,force-remote-dns
 DOMAIN-SUFFIX,toytractorshow.com,Proxy,force-remote-dns
