--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -29,7 +29,7 @@ DOMAIN-SUFFIX,vali.cp31.ott.cibntv.net,ChinaProxy
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-11-01 16:51:50
+// updated on 2017-11-07 17:33:40
 
 PROCESS-NAME,Jietu,REJECT
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
@@ -967,6 +967,7 @@ DOMAIN-KEYWORD,dnserror,REJECT
 DOMAIN-KEYWORD,domob,REJECT
 DOMAIN-KEYWORD,duomeng,REJECT
 DOMAIN-KEYWORD,dwtrack,REJECT
+DOMAIN-KEYWORD,flurry.co,REJECT
 DOMAIN-KEYWORD,guanggao,REJECT
 DOMAIN-KEYWORD,inmobi,REJECT
 DOMAIN-KEYWORD,lianmeng,REJECT
@@ -1310,6 +1311,7 @@ DOMAIN-SUFFIX,ad.360yield.com,REJECT
 DOMAIN-SUFFIX,ad.95306.cn,REJECT
 DOMAIN-SUFFIX,ad.about.co.kr,REJECT
 DOMAIN-SUFFIX,ad.accessmediaproductions.com,REJECT
+DOMAIN-SUFFIX,ad.api.3g.tudou.com,REJECT
 DOMAIN-SUFFIX,ad.bitmedia.io,REJECT
 DOMAIN-SUFFIX,ad.bjmama.net,REJECT
 DOMAIN-SUFFIX,ad.cctv.com,REJECT
@@ -1429,6 +1431,7 @@ DOMAIN-SUFFIX,adm.xmfish.com,REJECT
 DOMAIN-SUFFIX,adm.zbinfo.net,REJECT
 DOMAIN-SUFFIX,admaji.com,REJECT
 DOMAIN-SUFFIX,admarvel.com,REJECT
+DOMAIN-SUFFIX,admaster.com.cn,REJECT
 DOMAIN-SUFFIX,admd.yam.com,REJECT
 DOMAIN-SUFFIX,admedia.com,REJECT
 DOMAIN-SUFFIX,admeta.vo.llnwd.net,REJECT
@@ -1460,6 +1463,7 @@ DOMAIN-SUFFIX,ads.feedly.com,REJECT
 DOMAIN-SUFFIX,ads.genieessp.com,REJECT
 DOMAIN-SUFFIX,ads.heyzap.com,REJECT
 DOMAIN-SUFFIX,ads.mobclix.com,REJECT
+DOMAIN-SUFFIX,ads.mopub.com,REJECT
 DOMAIN-SUFFIX,ads.mp.mydas.mobi,REJECT
 DOMAIN-SUFFIX,ads.newtentionassets.net,REJECT
 DOMAIN-SUFFIX,ads.nexage.com,REJECT
@@ -1475,6 +1479,8 @@ DOMAIN-SUFFIX,ads.zynga.com,REJECT
 DOMAIN-SUFFIX,ads360.cn,REJECT
 DOMAIN-SUFFIX,ads8.com,REJECT
 DOMAIN-SUFFIX,ads80.com,REJECT
+DOMAIN-SUFFIX,adsage.cn,REJECT
+DOMAIN-SUFFIX,adsage.com,REJECT
 DOMAIN-SUFFIX,adsame.com,REJECT
 DOMAIN-SUFFIX,adsame1.cnr.cn,REJECT
 DOMAIN-SUFFIX,adsatt.abcnews.starwave.com,REJECT
@@ -1488,6 +1494,7 @@ DOMAIN-SUFFIX,adshost2.com,REJECT
 DOMAIN-SUFFIX,adshows.21cn.com,REJECT
 DOMAIN-SUFFIX,adsinstant.com,REJECT
 DOMAIN-SUFFIX,adsmogo.com,REJECT
+DOMAIN-SUFFIX,adsmogo.org,REJECT
 DOMAIN-SUFFIX,adsor.openrunner.com,REJECT
 DOMAIN-SUFFIX,adsp.xunlei.com,REJECT
 DOMAIN-SUFFIX,adsrich.qq.com,REJECT
@@ -1898,9 +1905,11 @@ DOMAIN-SUFFIX,creatives.pichunter.com,REJECT
 DOMAIN-SUFFIX,creatives.summitconnect.co.uk,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
 DOMAIN-SUFFIX,crl.microsoft.com,REJECT
+DOMAIN-SUFFIX,cr-nielsen.com,REJECT
 DOMAIN-SUFFIX,crosschannel.com,REJECT
 DOMAIN-SUFFIX,crs.baidu.com,REJECT
 DOMAIN-SUFFIX,csad.cc,REJECT
+DOMAIN-SUFFIX,csi.gstatic.com,REJECT
 DOMAIN-SUFFIX,csqiulong.com,REJECT
 DOMAIN-SUFFIX,cstoa.com,REJECT
 DOMAIN-SUFFIX,csxjys.com,REJECT
@@ -2065,6 +2074,8 @@ DOMAIN-SUFFIX,dugbvb.com,REJECT
 DOMAIN-SUFFIX,duiwai.baidu.com,REJECT
 DOMAIN-SUFFIX,dumedia.ru,REJECT
 DOMAIN-SUFFIX,duomeng.cn,REJECT
+DOMAIN-SUFFIX,duomeng.net,REJECT
+DOMAIN-SUFFIX,duomeng.org,REJECT
 DOMAIN-SUFFIX,duoyidd.com,REJECT
 DOMAIN-SUFFIX,dup.baidustatic.com,REJECT
 DOMAIN-SUFFIX,dushimj.com,REJECT
@@ -2099,6 +2110,7 @@ DOMAIN-SUFFIX,e9377f.com,REJECT
 DOMAIN-SUFFIX,eacash.streamplay.to,REJECT
 DOMAIN-SUFFIX,eap.big5.enorth.com.cn,REJECT
 DOMAIN-SUFFIX,eap.enorth.com.cn,REJECT
+DOMAIN-SUFFIX,eclick.baidu.com,REJECT
 DOMAIN-SUFFIX,eclkspbn.com,REJECT
 DOMAIN-SUFFIX,ecma.bdimg.com,REJECT
 DOMAIN-SUFFIX,ecmb.bdimg.com,REJECT
@@ -2171,6 +2183,7 @@ DOMAIN-SUFFIX,fjkst.com,REJECT
 DOMAIN-SUFFIX,fjmeyer.com,REJECT
 DOMAIN-SUFFIX,flashtalking.com,REJECT
 DOMAIN-SUFFIX,flowcodeapp.com,REJECT
+DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,fmgoal.com,REJECT
 DOMAIN-SUFFIX,fnkjj.com,REJECT
 DOMAIN-SUFFIX,focusprolight.com,REJECT
@@ -2264,6 +2277,7 @@ DOMAIN-SUFFIX,gma1.com,REJECT
 DOMAIN-SUFFIX,go.hangzhou.com.cn,REJECT
 DOMAIN-SUFFIX,godloveme.cn,REJECT
 DOMAIN-SUFFIX,go-mpulse.net,REJECT
+DOMAIN-SUFFIX,googeadsserving.cn,REJECT
 DOMAIN-SUFFIX,googlealiyun.cn,REJECT
 DOMAIN-SUFFIX,googletakes.com,REJECT
 DOMAIN-SUFFIX,goto.www.iciba.com,REJECT
@@ -2371,11 +2385,11 @@ DOMAIN-SUFFIX,hzaibi.com,REJECT
 DOMAIN-SUFFIX,hzhyhm.com,REJECT
 DOMAIN-SUFFIX,i.syasn.com,REJECT
 DOMAIN-SUFFIX,i.zhuoyaju.com,REJECT
-DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
 DOMAIN-SUFFIX,i3818.com,REJECT
 DOMAIN-SUFFIX,i92xue.com,REJECT
 DOMAIN-SUFFIX,iadc.qwapi.com,REJECT
 DOMAIN-SUFFIX,iads.xinmin.cn,REJECT
+DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 DOMAIN-SUFFIX,ibanners.empoweredcomms.com.au,REJECT
 DOMAIN-SUFFIX,icast.cn,REJECT
 DOMAIN-SUFFIX,id528.com,REJECT
@@ -2417,6 +2431,7 @@ DOMAIN-SUFFIX,img6.126.net,REJECT
 DOMAIN-SUFFIX,img80.net,REJECT
 DOMAIN-SUFFIX,immob.cn,REJECT
 DOMAIN-SUFFIX,imneinei.com,REJECT
+DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
 DOMAIN-SUFFIX,imrworldwide.com,REJECT
 DOMAIN-SUFFIX,in.zog.link,REJECT
 DOMAIN-SUFFIX,inad.com,REJECT
@@ -2659,6 +2674,7 @@ DOMAIN-SUFFIX,lyrymy.com,REJECT
 DOMAIN-SUFFIX,lytubaobao.com,REJECT
 DOMAIN-SUFFIX,lzjycy.com,REJECT
 DOMAIN-SUFFIX,lzmm8.com,REJECT
+DOMAIN-SUFFIX,m.simaba.taobao.com,REJECT
 DOMAIN-SUFFIX,ma1.meishij.net,REJECT
 DOMAIN-SUFFIX,madhouse.cn,REJECT
 DOMAIN-SUFFIX,madmini.com,REJECT
@@ -2702,6 +2718,7 @@ DOMAIN-SUFFIX,mgid.com,REJECT
 DOMAIN-SUFFIX,mgogo.com,REJECT
 DOMAIN-SUFFIX,mgwcn.com,REJECT
 DOMAIN-SUFFIX,mgwl668.com,REJECT
+DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,miaozhen.com,REJECT
 DOMAIN-SUFFIX,microad-cn.com,REJECT
 DOMAIN-SUFFIX,miidi.net,REJECT
@@ -2714,6 +2731,7 @@ DOMAIN-SUFFIX,miniye.xjts.cn,REJECT
 DOMAIN-SUFFIX,mixpanel.com,REJECT
 DOMAIN-SUFFIX,mm.anqu.com,REJECT
 DOMAIN-SUFFIX,mmcc.yxlady.com,REJECT
+DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,mng-ads.com,REJECT
 DOMAIN-SUFFIX,mnkan.com,REJECT
 DOMAIN-SUFFIX,mnwan.com,REJECT
@@ -2732,6 +2750,7 @@ DOMAIN-SUFFIX,mobiorg8.com,REJECT
 DOMAIN-SUFFIX,mobisage.cn,REJECT
 DOMAIN-SUFFIX,mobvista.com,REJECT
 DOMAIN-SUFFIX,money.qz828.com,REJECT
+DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
 DOMAIN-SUFFIX,moodoocrv.com.cn,REJECT
 DOMAIN-SUFFIX,mookie1.com,REJECT
 DOMAIN-SUFFIX,moonwish.com.cn,REJECT
@@ -2746,9 +2765,11 @@ DOMAIN-SUFFIX,mpush.cn,REJECT
 DOMAIN-SUFFIX,mrksys.com,REJECT
 DOMAIN-SUFFIX,msads.net,REJECT
 DOMAIN-SUFFIX,mscimg.com,REJECT
+DOMAIN-SUFFIX,msga.71.am,REJECT
 DOMAIN-SUFFIX,msltzer.cn,REJECT
 DOMAIN-SUFFIX,mstzym.com,REJECT
 DOMAIN-SUFFIX,msypr.com,REJECT
+DOMAIN-SUFFIX,mtj.baidu.com,REJECT
 DOMAIN-SUFFIX,mtxsk.com,REJECT
 DOMAIN-SUFFIX,mwlucuvbyrff.com,REJECT
 DOMAIN-SUFFIX,mxmrt.com,REJECT
@@ -2892,6 +2913,7 @@ DOMAIN-SUFFIX,pic.fengniao.com,REJECT
 DOMAIN-SUFFIX,picsinfog.com,REJECT
 DOMAIN-SUFFIX,pingbi.diudou.com,REJECT
 DOMAIN-SUFFIX,pingdom.net,REJECT
+DOMAIN-SUFFIX,pingjs.qq.com,REJECT
 DOMAIN-SUFFIX,pingshetrip.com,REJECT
 DOMAIN-SUFFIX,pixel.rubiconproject.com,REJECT
 DOMAIN-SUFFIX,pixel.wp.com,REJECT
@@ -3241,6 +3263,7 @@ DOMAIN-SUFFIX,tbjfw.com,REJECT
 DOMAIN-SUFFIX,tc600.com,REJECT
 DOMAIN-SUFFIX,tcjy66.cc,REJECT
 DOMAIN-SUFFIX,tdayi.com,REJECT
+DOMAIN-SUFFIX,temp.163.com,REJECT
 DOMAIN-SUFFIX,tencentmind.com,REJECT
 DOMAIN-SUFFIX,tg.1155t.cn,REJECT
 DOMAIN-SUFFIX,tg.52digua.com,REJECT
@@ -3318,7 +3341,9 @@ DOMAIN-SUFFIX,uimserv.net,REJECT
 DOMAIN-SUFFIX,ujian.cc,REJECT
 DOMAIN-SUFFIX,ujikdd041o.cn,REJECT
 DOMAIN-SUFFIX,ukeiae.com,REJECT
+DOMAIN-SUFFIX,umeng.co,REJECT
 DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,umeng.net,REJECT
 DOMAIN-SUFFIX,umtrack.com,REJECT
 DOMAIN-SUFFIX,umyai.com,REJECT
 DOMAIN-SUFFIX,un1.takefoto.cn,REJECT
@@ -3449,6 +3474,7 @@ DOMAIN-SUFFIX,www.32414.com,REJECT
 DOMAIN-SUFFIX,www.cliushow.com,REJECT
 DOMAIN-SUFFIX,www.hhlian.com,REJECT
 DOMAIN-SUFFIX,www.hi686.com,REJECT
+DOMAIN-SUFFIX,www.panoramio.com,REJECT
 DOMAIN-SUFFIX,www.you1ad.com,REJECT
 DOMAIN-SUFFIX,wyhzzy.com,REJECT
 DOMAIN-SUFFIX,wyttech.cn,REJECT
@@ -3690,7 +3716,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-11-01 16:51:56
+// updated on 2017-11-07 17:33:44
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
